Oprava swagger dokumentace
